Remlacement du fichier

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+.vs/
+.vs
 
 # Roslyn cache directories
 *.ide/
@@ -59,6 +61,9 @@ dlldata.c
 *.pidb
 *.svclog
 *.scc
+*.dll
+*.cache
+*.txt
 
 # Chutzpah Test files
 _Chutzpah*
