--- a/ZakLyd.Domaine.Entities/ZakLyd.Domaine.Entities.csproj
+++ b/ZakLyd.Domaine.Entities/ZakLyd.Domaine.Entities.csproj
@@ -51,9 +51,24 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="Agency.cs" />
+    <Compile Include="Agent.cs" />
+    <Compile Include="AirPlaneInformation.cs" />
+    <Compile Include="Announcment.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="Currency.cs" />
+    <Compile Include="enum\AgentRole.cs" />
+    <Compile Include="enum\CommentStatus.cs" />
     <Compile Include="enum\MediaType.cs" />
+    <Compile Include="enum\PropertyGroup.cs" />
+    <Compile Include="HotelDetail.cs" />
+    <Compile Include="Hotel.cs" />
     <Compile Include="Media.cs" />
+    <Compile Include="Pricing.cs" />
+    <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Step.cs" />
+    <Compile Include="Trip.cs" />
+    <Compile Include="Visitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
