--- a/ZakLyd/ZakLyd.csproj
+++ b/ZakLyd/ZakLyd.csproj
@@ -237,6 +237,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Config\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -251,9 +252,9 @@
       <Project>{1ec15610-e69c-4aa7-bc6f-b8573c21cd41}</Project>
       <Name>ZakLyd.Domaine.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ZakLyd.Infrastructure.Repository\ZakLyd.Infrastructure.Repository.csproj">
+    <ProjectReference Include="..\ZakLyd.Infrastructure.Repository\ZakLyd.Infrastructure.DAL.csproj">
       <Project>{5865028c-de64-4082-9da6-2bab1c1ad0dc}</Project>
-      <Name>ZakLyd.Infrastructure.Repository</Name>
+      <Name>ZakLyd.Infrastructure.DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
