--- a/ZakLyd/bin/ZakLyd.dll.config
+++ b/ZakLyd/bin/ZakLyd.dll.config
@@ -10,8 +10,8 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DBConnection" connectionString="server=PC-IKBAL; Initial Catalog=test;Integrated Security=True"
+  <connectionStrings >
+    <add name="DBConnection" connectionString="server=PC-IKBAL; Initial Catalog=ZAKLYDDEVDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
