--- a/ZakLyd/bin/ZakLyd.dll.config
+++ b/ZakLyd/bin/ZakLyd.dll.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings >
-    <add name="DBConnection" connectionString="server=PC-IKBAL; Initial Catalog=ZAKLYDDEVDB;Integrated Security=True"
+    <add name="DBConnection" connectionString="server=164.132.50.121; Initial Catalog=ZAKLYDDEVDB;Integrated Security=false;user=devuser;password=zaklydpwd"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
