--- a/ZakLyd.Infrastructure.Configuration/ZakLyd.Infrastructure.Configuration.csproj
+++ b/ZakLyd.Infrastructure.Configuration/ZakLyd.Infrastructure.Configuration.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5865028C-DE64-4082-9DA6-2BAB1C1AD0DC}</ProjectGuid>
+    <ProjectGuid>{32E7902F-3E96-4351-924C-1B286570C228}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ZakLyd.Infrastructure.Repository</RootNamespace>
-    <AssemblyName>ZakLyd.Infrastructure.Repository</AssemblyName>
+    <RootNamespace>ZakLyd.Infrastructure.Configuration</RootNamespace>
+    <AssemblyName>ZakLyd.Infrastructure.Configuration</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,20 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Repositories\ConfigurationRepository.cs" />
-    <Compile Include="ZakLydContext.cs" />
+    <Compile Include="ConfigurtionManager.cs" />
+    <Compile Include="Interfaces\IConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ZakLydDBInitializer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ZakLyd.Domaine.Entities\ZakLyd.Domaine.Entities.csproj">
-      <Project>{1ec15610-e69c-4aa7-bc6f-b8573c21cd41}</Project>
-      <Name>ZakLyd.Domaine.Entities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
