--- a/ZakLyd/ZakLyd.csproj
+++ b/ZakLyd/ZakLyd.csproj
@@ -197,6 +197,10 @@
     <Content Include="Content\bootstrap-datepicker3.standalone.css" />
     <Content Include="Content\bootstrap-datepicker3.standalone.min.css" />
     <Content Include="Content\bootstrap-social.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap2\bootstrap-switch.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap2\bootstrap-switch.min.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap3\bootstrap-switch.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap3\bootstrap-switch.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap-touchspin.css" />
@@ -210,11 +214,14 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Images\Backgrounds\HaramBG2.jpg" />
+    <Content Include="Content\Images\Backgrounds\HaramBG3.jpg" />
     <Content Include="Content\Images\flags\de.png" />
     <Content Include="Content\Images\flags\es.png" />
     <Content Include="Content\Images\flags\fr.png" />
     <Content Include="Content\Images\flags\gb.png" />
     <Content Include="Content\Images\flags\it.png" />
+    <Content Include="Content\Images\test\promo1.jpg" />
+    <Content Include="Content\Images\test\promo2.jpg" />
     <Content Include="Content\polyglot-language-switcher.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
@@ -246,6 +253,8 @@
     <Content Include="Content\bootstrap-datepicker.css.map" />
     <None Include="Scripts\jquery-1.12.0.intellisense.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
+    <Content Include="Scripts\bootstrap-switch.js" />
+    <Content Include="Scripts\bootstrap-switch.min.js" />
     <Content Include="Scripts\bootstrap-touchspin.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
