--- a/ZakLyd/packages.config
+++ b/ZakLyd/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.3.6" targetFramework="net46" />
   <package id="Bootstrap.Datepicker" version="1.6.0" targetFramework="net46" />
+  <package id="Bootstrap.Switch" version="3.3.2.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.fr" version="6.1.3" targetFramework="net46" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net46" />
