--- a/ZakLyd.Web.InterfaceEntities/ZakLyd.Web.InterfaceEntities.csproj
+++ b/ZakLyd.Web.InterfaceEntities/ZakLyd.Web.InterfaceEntities.csproj
@@ -63,6 +63,7 @@
     <Compile Include="HotelSummary.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="InterfaceEntity.cs" />
+    <Compile Include="Pricing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subscription.cs" />
   </ItemGroup>
