--- a/ZakLyd/ZakLyd.csproj
+++ b/ZakLyd/ZakLyd.csproj
@@ -181,8 +181,11 @@
     <Compile Include="Helpers\CultureHelper.cs" />
     <Compile Include="Helpers\LabelsHelper.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AdvancedSearchViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\SearchViewModel.cs" />
+    <Compile Include="Models\SortViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utils\ObjectToDictionnary.cs" />
